--- a/1915013.md
+++ b/1915013.md
@@ -5,7 +5,7 @@
 **Branch-** Computer Science & Engineering
 **Year-**  1st
 
-####Hello Budding Engineers
+**Hello Budding Engineers
 
 		#include<stdio.h>
 	     int main()
@@ -14,7 +14,7 @@
 	     return 0;
 	      }
 
-####Address using puts
+**Address using puts
 
     #include<stdio.h>
      int main()
@@ -23,7 +23,7 @@
       puts("H. No. 12/3 Ward No. 3 , Model Town, Distt. Ludhiana    Pincode-175xyz, Punjab, India");
     return 0;
     }
-####Sum of two numbers
+**Sum of two numbers
 
      #include<stdio.h>
       int main()
@@ -35,7 +35,7 @@
         printf("sum=%d\n",sum);
          return 0;
         }
-####Convert Celsius to Fahrniet
+**Convert Celsius to Fahrniet
 
       #include<stdio.h>
 
@@ -50,7 +50,7 @@
 
           return 0;
           }
-####Multiplication Table
+**Multiplication Table
 
 	#include<stdio.h> 
 	int main()
@@ -68,7 +68,7 @@
 	}
 	return 0;
 	}
-####Perimeter and area of circle
+**Perimeter and area of circle
 
 	#include<stdio.h>
 	#define PI 3.14
@@ -83,7 +83,7 @@
 	printf("Perimeter of the circle=%f\n",peri);
 	return 0;
 	}
-####Reverse 
+**Reverse 
 
     #include <stdio.h>
     int main()
@@ -100,7 +100,7 @@
         printf("Reversed Number = %d", reversedNumber);
         return 0;
     }
-####Swapping without using a third variable   
+**Swapping without using a third variable   
 
         #include <stdio.h>
      
@@ -121,7 +121,7 @@
      
       return 0;
     }
-####Even Odd
+**Even Odd
 
         #include <stdio.h>
     int main()
@@ -137,7 +137,7 @@
         return 0;
     }
     
-####Factorial  
+**Factorial  
     
 	    #include<stdio.h>  
 	int main()    
@@ -151,7 +151,7 @@
 	  printf("Factorial of %d is: %d",number,fact);    
 	return 0;  
 	}     
-####Weekdays using switch case  
+**Weekdays using switch case  
 
 
 
@@ -197,7 +197,7 @@
     }
 
 
-####Airthmetic operations using switch case
+**Airthmetic operations using switch case
 
 	#include<stdio.h>
 	
@@ -233,7 +233,7 @@
 	}
 	
 
-####Prime Numbers
+**Prime Numbers
 
     #include <stdio.h>
 	int main()
@@ -265,7 +265,7 @@
 	    }
 	    
     
-####Fibonacci Series
+**Fibonacci Series
 
 	    #include <stdio.h>
 	int main()
@@ -296,7 +296,8 @@
 	}
 
 
-#### Palindrome
+ **Palindrome
+ 
     #include <stdio.h>
     int main()
     {
@@ -319,7 +320,7 @@
     }
     
     
-####Star Half Pyramid 
+#### Star Half Pyramid 
 
 	    #include <stdio.h>
 	int main()
@@ -339,7 +340,7 @@
 	}
 
 
-####Star Inverted Half Pyramid
+#### Star Inverted Half Pyramid
 
     #include <stdio.h>
     int main()
@@ -359,7 +360,7 @@
         return 0;
     }
     
-####1D Array
+#### 1D Array
 
 	    #include <stdio.h>  
 	  
@@ -386,7 +387,7 @@
 	}
 
 
-####Maximum Size of an array
+#### Maximum Size of an array
 
 	#include <stdio.h>
 	
@@ -443,7 +444,7 @@
 	}
 	
 
-####2D Array
+#### 2D Array
 
 	#include<stdio.h>
 	int main(){
@@ -471,7 +472,7 @@
 	}
 
 
-####Sum of two matrices
+#### Sum of two matrices
 
     #include <stdio.h>
      
@@ -507,7 +508,7 @@
     }
     
     
-####   Transpose of matrix
+#### Transpose of matrix
 	    #include<stdio.h>
 	void main()
 	{ 
@@ -541,7 +542,7 @@
 	}
 	
 	
-####Substraction of two arrays
+#### Substraction of two arrays
 
 	    #include <stdio.h>
 	     
@@ -575,7 +576,7 @@
 	     
 	       return 0;
 	    }
-####Multiplication of two matrices   
+#### Multiplication of two matrices   
     
 	    #include <stdio.h>
 	 
