--- a/1915013.md
+++ b/1915013.md
@@ -5,7 +5,7 @@
 **Branch-** Computer Science & Engineering
 **Year-**  1st
 
-**Hello Budding Engineers
+#### Hello Budding Engineers
 
 		#include<stdio.h>
 	     int main()
@@ -14,7 +14,7 @@
 	     return 0;
 	      }
 
-**Address using puts
+#### Address using puts
 
     #include<stdio.h>
      int main()
@@ -35,7 +35,7 @@
         printf("sum=%d\n",sum);
          return 0;
         }
-**Convert Celsius to Fahrniet
+#### Convert Celsius to Fahrniet
 
       #include<stdio.h>
 
@@ -50,7 +50,7 @@
 
           return 0;
           }
-**Multiplication Table
+#### Multiplication Table
 
 	#include<stdio.h> 
 	int main()
@@ -68,7 +68,7 @@
 	}
 	return 0;
 	}
-**Perimeter and area of circle
+# Perimeter and area of circle
 
 	#include<stdio.h>
 	#define PI 3.14
@@ -83,7 +83,7 @@
 	printf("Perimeter of the circle=%f\n",peri);
 	return 0;
 	}
-**Reverse 
+# Reverse 
 
     #include <stdio.h>
     int main()
@@ -100,7 +100,7 @@
         printf("Reversed Number = %d", reversedNumber);
         return 0;
     }
-**Swapping without using a third variable   
+# Swapping without using a third variable   
 
         #include <stdio.h>
      
@@ -121,7 +121,7 @@
      
       return 0;
     }
-**Even Odd
+# Even Odd
 
         #include <stdio.h>
     int main()
@@ -137,7 +137,7 @@
         return 0;
     }
     
-**Factorial  
+# Factorial  
     
 	    #include<stdio.h>  
 	int main()    
@@ -151,7 +151,7 @@
 	  printf("Factorial of %d is: %d",number,fact);    
 	return 0;  
 	}     
-**Weekdays using switch case  
+# Weekdays using switch case  
 
 
 
@@ -197,7 +197,7 @@
     }
 
 
-**Airthmetic operations using switch case
+# Airthmetic operations using switch case
 
 	#include<stdio.h>
 	
@@ -233,7 +233,7 @@
 	}
 	
 
-**Prime Numbers
+# Prime Numbers
 
     #include <stdio.h>
 	int main()
@@ -265,7 +265,7 @@
 	    }
 	    
     
-**Fibonacci Series
+# Fibonacci Series
 
 	    #include <stdio.h>
 	int main()
@@ -296,7 +296,7 @@
 	}
 
 
- **Palindrome
+ # Palindrome
  
     #include <stdio.h>
     int main()
@@ -320,7 +320,7 @@
     }
     
     
-#### Star Half Pyramid 
+# Star Half Pyramid 
 
 	    #include <stdio.h>
 	int main()
