--- a/1915013.md
+++ b/1915013.md
@@ -5,7 +5,7 @@
 **Branch-** Computer Science & Engineering
 **Year-**  1st
 
-#### Hello Budding Engineers
+# Hello Budding Engineers
 
 		#include<stdio.h>
 	     int main()
@@ -14,7 +14,7 @@
 	     return 0;
 	      }
 
-#### Address using puts
+# Address using puts
 
     #include<stdio.h>
      int main()
@@ -23,7 +23,7 @@
       puts("H. No. 12/3 Ward No. 3 , Model Town, Distt. Ludhiana    Pincode-175xyz, Punjab, India");
     return 0;
     }
-#### Sum of two numbers
+# Sum of two numbers
 
      #include<stdio.h>
       int main()
@@ -35,7 +35,7 @@
         printf("sum=%d\n",sum);
          return 0;
         }
-#### Convert Celsius to Fahrniet
+# Convert Celsius to Fahrniet
 
       #include<stdio.h>
 
@@ -50,7 +50,7 @@
 
           return 0;
           }
-#### Multiplication Table
+# Multiplication Table
 
 	#include<stdio.h> 
 	int main()
